src/main/java/org/example/lab_3/error/ApartmentAlreadyBooked.java
package org.example.lab_3.error;

public class ApartmentAlreadyBooked extends Exception {

	public ApartmentAlreadyBooked(String message) {
		super(message);
	}
}
